--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
 
 <p>click <a href="html/info.asis">here</a> for more information in plain text</p>
 
-<img src="images/tux.png">
+<img src="/images/tux.png">
 </center>
 </body>
 </html>
