--- a/www/404.html
+++ b/www/404.html
@@ -1,11 +1,14 @@
 
 <html>
-<head><title>404 - page not found</title></head>
-<body bgcolor="556B2F">
+<head><title>404 - page not found</title>
+<link rel="stylesheet" type="text/css" href="/styles.css"</head>
+<body>
 <center>
-	<h1>Dohh! <br>This is a 404 - page not found - which is somewhat a mystery to me!</h1>
 
+<h1>Dohh! A 404 page not found! </h1>
 <img src="/images/homer.jpg" height="400 width="200">
+<br>Must be that lame neighbor - Flanders!
+<br><a href="/index.html"> Back to safety</a>
 </center>
 </body>
 </html>
