--- a/www/404.html
+++ b/www/404.html
@@ -8,7 +8,7 @@
 <h1>Dohh! A 404 page not found! </h1>
 <img src="/images/homer.jpg" height="400 width="200">
 <br>Must be that lame neighbor - Flanders!
-<br><a href="/index.html"> Back to safety</a>
+<br><a href="/"> Back to safety</a>
 </center>
 </body>
 </html>
