--- a/www/cgitest.html
+++ b/www/cgitest.html
@@ -7,20 +7,22 @@
 <center>
 <h1>CGI POST and GET test!</h1>
 
-<table cellspacing="20">
+<table id="para" cellspacing="20">
 	<tr>
-		<td><p id="para"><img src="/images/tux.png" height="150px"></p></td>
-		<td><p id="para">
-			Q. What is the biggest lie in the entire universe? A. I have read and agree to the Terms and Conditions.</p></td></tr></table>
-POST: <form action="localhost:8080/cgi-bin/hallo_2.cgi" method="post">
-	<input type="text" name="navn">
-	<input type="submit">
-</form>
+		<td>
+			POST: <form action="localhost:8080/cgi-bin/hallo_2.cgi" method="post">
+			<input type="text" name="navn">
+			<input type="submit">
+			</form>
+		</td>
 
-GET: <form action="localhost:8080/cgi-bin/hallo_2.cgi" method="get">
-	<input type="text" name="navn">
-	<input type="submit">
-</form>
+		<td>
+			GET: <form action="localhost:8080/cgi-bin/hallo_2.cgi" method="get">
+			<input type="text" name="navn">
+			<input type="submit">
+		</form>
+		</td>
+	</tr>
+</table>	
 </center>
-</body>
-</html>
+</body></html>
