--- a/www/cgitest.html
+++ b/www/cgitest.html
@@ -10,14 +10,14 @@
 <table id="para" cellspacing="20">
 	<tr>
 		<td>
-			POST: <form action="localhost:8080/cgi-bin/hallo_2.cgi" method="post">
+			POST: <form action="http://bp:8080/cgi-bin/hallo_2.cgi" method="post">
 			<input type="text" name="navn">
 			<input type="submit">
 			</form>
 		</td>
 
 		<td>
-			GET: <form action="localhost:8080/cgi-bin/hallo_2.cgi" method="get">
+			GET: <form action="http://bp:8080/cgi-bin/hallo_2.cgi" method="get">
 			<input type="text" name="navn">
 			<input type="submit">
 		</form>
